--- a/productLandingpage/index.html
+++ b/productLandingpage/index.html
@@ -14,7 +14,7 @@
       <img id="header-img"src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png">
       <nav id="nav-bar">
         <ul>
-         <li class="nav-link">Features</li>
+         <li class="nav-link">Aesome Features </li>
          <li class="nav-link">How it works</li>
          <li class="nav-link">Pricing</li>
     </ul>
