--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tribute page</title>
-    <link rel="stylesheet" href="./styles.Css"></link>
+    <link rel="stylesheet" href="./styles.css"></link>
 </head>
 <body>
     <h1 id="title">Google's Survey Form</h1>
