--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <a href="/demoInputForm/index.html">Demo input form</a>
+    <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
   </body>
 </html>
