changes in ui of todo app

--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -23,26 +23,34 @@
     <section>
       <div class="container">
         <div class="water">
-          <span class="material-symbols-outlined"> check_circle </span>
+          <span class="material-symbols-outlined circle"> check_circle</span>
           <p>Drink water</p>
-          <p class="time">7:55 PM</p>
-          <span class="material-symbols-outlined"> delete </span>
+
+          <span class="time"
+            >7:55 PM
+            <span class="material-symbols-outlined delete"> delete </span></span
+          >
         </div>
         <div class="walk">
-          <span class="material-symbols-outlined">
-            radio_button_unchecked
-          </span>
+          <span class="material-symbols-outlined circle">
+            radio_button_unchecked</span
+          >
           <p>Go to walk</p>
-          <p>8:00 PM</p>
-          <span class="material-symbols-outlined"> delete </span>
+
+          <span
+            >8:00 PM
+            <span class="material-symbols-outlined delete"> delete </span></span
+          >
         </div>
         <div class="email">
-          <span class="material-symbols-outlined">
+          <span class="material-symbols-outlined circle">
             radio_button_unchecked
           </span>
           <p>Write an email</p>
-          <p>8:40 PM</p>
-          <span class="material-symbols-outlined"> delete </span>
+          <span
+            >8:40 PM
+            <span class="material-symbols-outlined delete"> delete </span></span
+          >
         </div>
       </div>
     </section>
