added new project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    g
   </head>
   <body>
     <a href="/demoInputForm/index.html">Demo input form</a>
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
+    <a href="/todoApp/index.html">Todo app</a>
   </body>
 </html>
