project todo app

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    g
+    <title>My Projexts</title>
   </head>
   <body>
     <a href="/demoInputForm/index.html">Demo input form</a>
+    <a href="/todoApp/index.html">todo app</a>
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
-    <a href="/todoApp/index.html">Todo app</a>
   </body>
 </html>
