--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="/demoInputForm/index.html">Demo input form</a>
     <a href="/todoApp/index.html">todo app</a>
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
+    <a href="/calculator/index.html">Calculator</a>
   </body>
 </html>
