--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="/todoApp/index.html">todo app</a>
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
     <a href="/calculator/index.html">Calculator</a>
+    <a href="/verifyYourAccount/index.html" class=""></a>
   </body>
 </html>
