added js file to rock paper scissor project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
     <a href="/calculator/index.html">Calculator</a>
     <a href="/verifyYourAccount/index.html" class=""></a>
+    <a href="/rock,paper,scissor/index.html" class=""></a>
   </body>
 </html>
