--- a/rock,paper,scissor/index.html
+++ b/rock,paper,scissor/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Let's play Rock,Paper,scissors!</h1>
     <main>
-      <section class="rules-container">
+      <section class="rules-container expand">
         <div>
           Rules to the Game
           <ul>
@@ -30,7 +30,7 @@
       </section>
       <div class="score-container">
         <strong>Player Score: <span id="player-score">0</span></strong>
-        <strong>Computer score: <span id="player-score">0</span></strong>
+        <strong>Computer score: <span id="computer-score">0</span></strong>
       </div>
       <section class="option-container">
         <h2>Choose an option</h2>
@@ -46,5 +46,6 @@
         <button class="btn" id="reset-game-btn">Play again?</button>
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
