added new projet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="/todoApp/index.html">todo app</a>
     <a href="/waterDrinkTimer/index.html">waterDrinkTimer</a>
     <a href="/calculator/index.html">Calculator</a>
-    <a href="/verifyYourAccount/index.html"></a>
-    <a href="/rock,paper,scissor/index.html"></a>
+    <a href="/verifyYourAccount/index.html">verify your account</a>
+    <a href="/rockPaperScissor/index.html">Rock paper scissor game</a>
   </body>
 </html>
