--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="/calculator/index.html">Calculator</a>
     <a href="/verifyYourAccount/index.html">verify your account</a>
     <a href="/rockPaperScissor/index.html">Rock paper scissor game</a>
+    <a href="/weatherApp/index.html">Weather App</a>
   </body>
 </html>
