added new modifications projet

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="/verifyYourAccount/index.html">verify your account</a>
     <a href="/rockPaperScissor/index.html">Rock paper scissor game</a>
     <a href="/weatherApp/index.html">Weather App</a>
+    <a href="/notesApp/index.html"></a>
   </body>
 </html>
