--- a/notesApp/index.html
+++ b/notesApp/index.html
@@ -16,7 +16,9 @@
         <header>
           <div class="arrow">
             <button>
-              <span class="material-symbols-outlined"> arrow_back </span>
+              <span class="material-symbols-outlined arrow-back">
+                arrow_back
+              </span>
             </button>
           </div>
           <div class="heading-text">
@@ -25,34 +27,35 @@
           </div>
           <div class="btns">
             <button>
-              <span class="material-symbols-outlined header-icons">
+              <span class="material-symbols-outlined btn-icon">
                 border_color
               </span>
             </button>
             <button>
-              <span class="material-symbols-outlined header-icons">
-                close
-              </span>
+              <span class="material-symbols-outlined btn-icon"> close </span>
             </button>
           </div>
         </header>
         <div class="contents">
-          <input type="checkbox" class="checkbox" checked /><label
-            >Detergent
+          <label>
+            <input type="checkbox" class="checkbox" checked />
+            Detergent
           </label>
-          <input type="checkbox" class="checkbox" checked />
-          <label>Tipods</label>
-          <input type="checkbox" class="checkbox" checked />
-          <label>Shirts</label>
-          <input type="checkbox" class="checkbox" checked />
-          <label>Pants</label>
-          <input type="checkbox" class="checkbox" checked />
-          <label>Socks</label>
-          <input type="checkbox" class="checkbox" checked />
-          <label>Bedsheets</label>
-          <input type="checkbox" class="checkbox" />
-          <label>carpets</label>
-          <input type="checkbox" class="checkbox" />
+          <label
+            ><input type="checkbox" class="checkbox" checked />Tipods</label
+          >
+          <label>
+            <input type="checkbox" class="checkbox" checked />
+            Shirts</label
+          >
+          <label><input type="checkbox" class="checkbox" checked />Pants</label>
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Socks</label
+          >
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Bedsheets</label
+          >
+          <label><input type="checkbox" class="checkbox" /> carpets</label>
         </div>
       </div>
     </div>
