--- a/notesApp/index.html
+++ b/notesApp/index.html
@@ -56,6 +56,32 @@
             ><input type="checkbox" class="checkbox" checked /> Bedsheets</label
           >
           <label><input type="checkbox" class="checkbox" /> carpets</label>
+          <label>
+            <input type="checkbox" class="checkbox" checked />
+            Detergent
+          </label>
+          <label
+            ><input type="checkbox" class="checkbox" checked />Tipods</label
+          >
+          <label>
+            <input type="checkbox" class="checkbox" checked />
+            Shirts</label
+          >
+          <label><input type="checkbox" class="checkbox" checked />Pants</label>
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Socks</label
+          >
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Bedsheets</label
+          >
+          <label><input type="checkbox" class="checkbox" /> carpets</label>
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Socks</label
+          >
+          <label
+            ><input type="checkbox" class="checkbox" checked /> Bedsheets</label
+          >
+          <label><input type="checkbox" class="checkbox" /> carpets</label>
         </div>
       </div>
     </div>
