--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="/rockPaperScissor/index.html">Rock paper scissor game</a>
     <a href="/weatherApp/index.html">Weather App</a>
     <a href="/notesApp/index.html"></a>
+    <a href="/borderRadiusPreview/index.html">border radius preview</a>
   </body>
 </html>
