added javascript to border radius preview

--- a/borderRadiusPreview/index.html
+++ b/borderRadiusPreview/index.html
@@ -15,16 +15,16 @@
       </div>
       <div class="container">
         <div class="input-wrapper tl">
-          <input type="text" class="number" value="0" />
+          <input type="text" class="number" id="top-left" value="0" />
         </div>
         <div class="input-wrapper tr">
-          <input type="text" class="number" value="0" />
+          <input type="text" class="number" id="top-right" value="0" />
         </div>
         <div class="input-wrapper br">
-          <input type="text" class="number" value="0" />
+          <input type="text" class="number" id="bottom-right" value="0" />
         </div>
         <div class="input-wrapper bl">
-          <input type="text" class="number" value="0" />
+          <input type="text" class="number" id="bottom-left" value="0" />
         </div>
         <div class="box">
           <textarea></textarea>
@@ -50,7 +50,6 @@
               <img
                 src="https://srv.carbonads.net/static/30242/ede7fb3…"
                 alt="ads via Carbon"
-                border="0"
                 height="100"
                 width="130"
                 data-no-statview="no"
@@ -74,5 +73,6 @@
         </span>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
