added two new projects

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="/weatherApp/index.html">Weather App</a>
     <a href="/notesApp/index.html"></a>
     <a href="/borderRadiusPreview/index.html">border radius preview</a>
+    <a href="/decimalToBinary/index.html">Decimal to Binary</a>
+    <a href="/binaryToDecimal/index.html">binaryToDecimal</a>
   </body>
 </html>
