--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="/borderRadiusPreview/index.html">border radius preview</a>
     <a href="/decimalToBinary/index.html">Decimal to Binary</a>
     <a href="/binaryToDecimal/index.html">binaryToDecimal</a>
+    <a href="/countdownTimer/index.html">countdown timer </a>
   </body>
 </html>
