completed quiz app

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="/decimalToBinary/index.html">Decimal to Binary</a>
     <a href="/binaryToDecimal/index.html">binaryToDecimal</a>
     <a href="/countdownTimer/index.html">countdown timer </a>
+    <a href="/quizApp/index.html">Quiz app</a>
   </body>
 </html>
