--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="/binaryToDecimal/index.html">binaryToDecimal</a>
     <a href="/countdownTimer/index.html">countdown timer </a>
     <a href="/quizApp/index.html">Quiz app</a>
+    <a href="/randomNumberGenerator/index.html">Random Number Generater</a>
   </body>
 </html>
