added javascript to random number generator

--- a/randomNumberGenerator/index.html
+++ b/randomNumberGenerator/index.html
@@ -40,10 +40,12 @@
         </div>
       </div>
       <div class="generate-box">
-        <button type="button" class="gen-btn">generate</button>
+        <button type="button" class="gen-btn" id="generate-btn">
+          generate
+        </button>
       </div>
       <div class="result">
-        <h1>0</h1>
+        <h1 id="view-result">0</h1>
       </div>
     </div>
     <script src="script.js"></script>
