new project palindrome

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="/countdownTimer/index.html">countdown timer </a>
     <a href="/quizApp/index.html">Quiz app</a>
     <a href="/randomNumberGenerator/index.html">Random Number Generater</a>
+    <a href="/palindromeProject/index.html">Palindrome Project</a>
   </body>
 </html>
