added javascript to palindrome

--- a/palindromeProject/index.html
+++ b/palindromeProject/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Is It a Palindrome</h1>
+      <h1 class="title">Is It a Palindrome?</h1>
       <div class="palindrome-div">
         <label for="text-input">Enter in text to check for a palindrome:</label>
         <input class="palindrome-input" id="text-input" value="" type="text" />
-        <button class="palindrome-btn">Check</button>
+        <button class="palindrome-btn" id="check-btn">Check</button>
         <div class="results-div hidden" id="result"></div>
       </div>
       <div class="palindrome-definition-div">
@@ -24,6 +24,6 @@
         </p>
       </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
