added js to word freq counter

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="/quizApp/index.html">Quiz app</a>
     <a href="/randomNumberGenerator/index.html">Random Number Generater</a>
     <a href="/palindromeProject/index.html">Palindrome Project</a>
+    <a href="/wordFrequencyCounter/index.html">word Frequency Counter</a>
   </body>
 </html>
