--- a/wordFrequencyCounter/index.html
+++ b/wordFrequencyCounter/index.html
@@ -11,8 +11,10 @@
       <h1>Word Frequency Counter</h1>
       <textarea id="textbox"></textarea>
       <br />
-      <button type="buttton" id="countButton">Count These words</button>
-      <div id="div-table"></div>
+      <div class="wordchar">
+        <span id="words">0</span> words and
+        <span id="Characters">0</span> Characters
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
