added javascript project to stopwatch

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <a href="/randomNumberGenerator/index.html">Random Number Generater</a>
     <a href="/palindromeProject/index.html">Palindrome Project</a>
     <a href="/wordFrequencyCounter/index.html">word Frequency Counter</a>
+    <a href="/stopWatch/index.html">stopwatch</a>
   </body>
 </html>
