added js to stopwatch

--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -9,9 +9,10 @@
   <body>
     <div class="container">
       <div id="time">
-        <span class="digit" id="hr">00</span>
+        00:00:00
+        <!-- <span class="digit" id="hr">00</span>
         <span class="digit" id="min">00</span>
-        <span class="digit" id="sec">00</span>
+        <span class="digit" id="sec">00</span> -->
       </div>
       <div id="buttons">
         <button class="btn" id="start">Start</button>
