--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <a href="/palindromeProject/index.html">Palindrome Project</a>
     <a href="/wordFrequencyCounter/index.html">word Frequency Counter</a>
     <a href="/stopWatch/index.html">stopwatch</a>
+    <a href="/pomodoroClock/index.html">pomodoro Clock</a>
   </body>
 </html>
