new project image slider

--- a/pomodoroClock/index.html
+++ b/pomodoroClock/index.html
@@ -16,7 +16,7 @@
         <div>
           <div class="main-title">25 + 5 Clock</div>
           <div class="length-control">
-            <div id="break-label">Break-length</div>
+            <div id="break-label">Break length</div>
             <button class="btn-level" id="break-decrement" value="-">
               <span class="material-symbols-outlined"> arrow_downward </span>
             </button>
@@ -43,6 +43,7 @@
           <div>
             <div id="timer-label">Session</div>
             <div id="time-left">25:00</div>
+            <div id="break-left">5:00</div>
           </div>
         </div>
         <div class="time-control">
