added js to new project

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <a href="/wordFrequencyCounter/index.html">word Frequency Counter</a>
     <a href="/stopWatch/index.html">stopwatch</a>
     <a href="/pomodoroClock/index.html">pomodoro Clock</a>
+    <a href="/sliderDesign/index.html">Image slider</a>
   </body>
 </html>
