--- a/sliderDesign/index.html
+++ b/sliderDesign/index.html
@@ -37,6 +37,14 @@
         </p>
     </div>
 </div>
+<div class="slide" style="background-image: url(https://images.unsplash.com/photo-1509114397022-ed747cca3f65?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+  <div class="info">
+      <h1>Sky View</h1>
+      <p>
+        Even the stormiest clouds eventually part, revealing a brilliant sun. So too will your challenges pass, and brighter days are ahead.
+        Like the sunrise, a new day brings new opportunities. Embrace them with open arms.
+      </p>
+  </div>
 <!-- The rest of the slides -->
 </div>
 <!-- <div class="eraser"></div> -->
