new project color cycle

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <a href="/stopWatch/index.html">stopwatch</a>
     <a href="/pomodoroClock/index.html">pomodoro Clock</a>
     <a href="/sliderDesign/index.html">Image slider</a>
+    <a href="/colorCycle/index.html">color cycle</a>
   </body>
 </html>
