--- a/recipeBox/index.html
+++ b/recipeBox/index.html
@@ -79,5 +79,22 @@
         </div>
       </div>
     </footer>
+    <div class="form-overlay">
+      <div class="form-bg">
+        <form class="form">
+          <span class="material-symbols-outlined"> close </span>
+          <h2 class="form-title">Add Recipe</h2>
+          <label>Recipe name *</label>
+          <input type="text" id="recipe-name" />
+          <label>Ingredients *</label>
+          <textarea id="Ingredients"></textarea>
+          <label>instructions *</label>
+          <textarea id="instructions"></textarea>
+          <label>Image URL (optional)</label>
+          <input type="text" id="image-url" />
+          <input type="submit" class="btn-primary" value="add recipe" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
