added new project roman number to decimal

--- a/recipeBox/index.html
+++ b/recipeBox/index.html
@@ -27,18 +27,85 @@
     </header>
     <div class="container">
       <main class="title-container">
-        <div class="title">
-          <main class="title-main">
-            <div class="title-hero" style="background-image: url()"></div>
-            <header class="title-header">
-              <h2 id="title-title"></h2>
-            </header>
-          </main>
-          <footer class="title-footer">
-            <button class="btn">
-              <span class="material-symbols-outlined"> open_in_new </span> Open
-              Recipe
-            </button>
+        <main class="title-main">
+          <div class="title-hero" style="background-image: url()"></div>
+          <header class="title-header">
+            <h2 id="title-title"></h2>
+          </header>
+        </main>
+
+        <div class="tiles-wrap">
+          <div class="tile">
+            <div class="tile-poster-img">
+              <img
+                src="https://imgproxy.epicpxls.com/jN_ej4xrKuAS8DK3hi_qQR98G4luHWuia8TOhoI8NAo/rs:fill:800:600:0/g:no/aHR0cHM6Ly9pdGVt/cy5lcGljcHhscy5j/b20vdXBsb2Fkcy9w/aG90by8zNjMwMjE3/MzdiN2E1ZDBkY2E3/NzBlYmM2Yjk5Nzgx/NQ.jpg"
+                alt="tile"
+              />
+            </div>
+
+            <div class="tile-title">
+              <h2>Salsa verde Salsa verde Salsa verde Salsa verde</h2>
+            </div>
+
+            <div class="tile-footer">
+              <button class="btn">
+                <span class="material-symbols-outlined"> open_in_new </span>
+                Open Recipe
+              </button>
+            </div>
+          </div>
+          <div class="tile">
+            <div class="tile-poster-img">
+              <img
+                src="https://imgproxy.epicpxls.com/jN_ej4xrKuAS8DK3hi_qQR98G4luHWuia8TOhoI8NAo/rs:fill:800:600:0/g:no/aHR0cHM6Ly9pdGVt/cy5lcGljcHhscy5j/b20vdXBsb2Fkcy9w/aG90by8zNjMwMjE3/MzdiN2E1ZDBkY2E3/NzBlYmM2Yjk5Nzgx/NQ.jpg"
+                alt="tile"
+              />
+            </div>
+
+            <div class="tile-title">
+              <h2>Salsa verde</h2>
+            </div>
+
+            <div class="tile-footer">hi</div>
+          </div>
+          <div class="tile">
+            <div class="tile-poster-img">
+              <img
+                src="https://imgproxy.epicpxls.com/jN_ej4xrKuAS8DK3hi_qQR98G4luHWuia8TOhoI8NAo/rs:fill:800:600:0/g:no/aHR0cHM6Ly9pdGVt/cy5lcGljcHhscy5j/b20vdXBsb2Fkcy9w/aG90by8zNjMwMjE3/MzdiN2E1ZDBkY2E3/NzBlYmM2Yjk5Nzgx/NQ.jpg"
+                alt="tile"
+              />
+            </div>
+
+            <div class="tile-title">
+              <h2>Salsa verde</h2>
+            </div>
+
+            <div class="tile-footer">hi</div>
+          </div>
+          <div class="tile">
+            <div class="tile-poster-img">
+              <img
+                src="https://imgproxy.epicpxls.com/jN_ej4xrKuAS8DK3hi_qQR98G4luHWuia8TOhoI8NAo/rs:fill:800:600:0/g:no/aHR0cHM6Ly9pdGVt/cy5lcGljcHhscy5j/b20vdXBsb2Fkcy9w/aG90by8zNjMwMjE3/MzdiN2E1ZDBkY2E3/NzBlYmM2Yjk5Nzgx/NQ.jpg"
+                alt="tile"
+              />
+            </div>
+
+            <div class="tile-title">
+              <h2>Salsa verde</h2>
+            </div>
+
+            <div class="tile-footer">hi</div>
+          </div>
+        </div>
+
+        <div>
+          <footer>
+            <div class="title-footer">
+              <button class="btn">
+                <span class="material-symbols-outlined"> open_in_new </span>
+                Open Recipe
+              </button>
+            </div>
           </footer>
         </div>
       </main>
@@ -79,7 +146,7 @@
         </div>
       </div>
     </footer>
-    <div class="form-overlay">
+    <!-- <div class="form-overlay">
       <div class="form-bg">
         <form class="form">
           <span class="material-symbols-outlined"> close </span>
@@ -95,6 +162,6 @@
           <input type="submit" class="btn-primary" value="add recipe" />
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
