made new changes

--- a/notesApp/index.html
+++ b/notesApp/index.html
@@ -21,11 +21,11 @@
       </div>
       <div id="list-conatiner">
         <ul id="notes-list">
-          <li class="note" data-text="This is a note">
+          <!-- <li class="note" data-text="This is a note">
             This is a note
             <button class="edit" id="editBtn">Edit</button>
             <button class="delete" id="deleteBtn">Delete</button>
-          </li>
+          </li> -->
         </ul>
       </div>
 
